Fix search bar alignment

--- a/data/shell.css
+++ b/data/shell.css
@@ -35,3 +35,8 @@
     padding: 20px;
 }
 */
+
+.search-button {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
